--- a/polymer_deck.ipynb
+++ b/polymer_deck.ipynb
@@ -25,11 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polymer_Sw_util as pu\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "import polymer_util as pu"
    ]
   },
   {
