--- a/buckley_leverett_analysis.ipynb
+++ b/buckley_leverett_analysis.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl = blu.BuckleyLeverett(params_dict = params, GravOn=False, NG=NG, debug=True)"
+    "bl = blu.BuckleyLeverett(params_dict = params, GravOn=False, NG=NG)"
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,26 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'shock'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bl_shock.events"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -420,12 +400,12 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_hull = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)"
+    "bl_hull = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -639,12 +619,12 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_dip_pos = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)"
+    "bl_dip_pos = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -746,12 +726,12 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_dip_neg = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)"
+    "bl_dip_neg = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -986,12 +966,12 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_ini = blu.BuckleyLeverett(params_dict = params, GravOn=False, NG=NG, debug=True)"
+    "bl_ini = blu.BuckleyLeverett(params_dict = params, GravOn=False, NG=NG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1183,7 @@
        "(<Figure size 1200x600 with 1 Axes>, <Axes: xlabel='Sw', ylabel='fw'>)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1239,14 +1219,14 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_sat = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)\n",
+    "bl_sat = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)\n",
     "\n",
     "bl_sat.plot_solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1352,12 +1332,12 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_chk = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)"
+    "bl_chk = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1415,7 @@
        "(<Figure size 1200x600 with 1 Axes>, <Axes: xlabel='Sw', ylabel='fw'>)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1471,14 +1451,14 @@
     "print(f'Dimensionless gravity number excl. dip effect = {NG/np.sin(grav_params['dip']*np.pi/180):4.2e}')\n",
     "\n",
     "# Gravity is included for GravOn=True, otherwise it is not included.\n",
-    "bl_Rksi = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG, debug=True)\n",
+    "bl_Rksi = blu.BuckleyLeverett(params_dict = params, GravOn=True, NG=NG)\n",
     "\n",
     "bl_Rksi.plot_solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1467,7 @@
        "(np.float64(0.0), np.float64(1.9484719033367466))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
